解决拍照旋转角度问题

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,4 +111,10 @@
         android:onClick="sysAlbum"
         android:text="调用系统相册"/>
 
+    <ImageView
+        android:id="@+id/iv_show"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
 </LinearLayout>
