--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,6 +99,9 @@
 
         </ScrollView>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -110,7 +113,11 @@
         android:layout_height="wrap_content"
         android:onClick="sysAlbum"
         android:text="调用系统相册"/>
-
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="goCameraView"/>
+    </LinearLayout>
     <ImageView
         android:id="@+id/iv_show"
         android:layout_width="match_parent"
