--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -34,16 +34,16 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@mipmap/ic_launcher"/>
-    <com.google.android.cameraview.CameraView
-        android:id="@+id/camera"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:keepScreenOn="true"
-        android:adjustViewBounds="true"
-        app:autoFocus="true"
-        app:aspectRatio="4:3"
-        app:facing="back"
-        app:flash="auto"/>
+<!--    <com.google.android.cameraview.CameraView-->
+<!--        android:id="@+id/camera"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:keepScreenOn="true"-->
+<!--        android:adjustViewBounds="true"-->
+<!--        app:autoFocus="true"-->
+<!--        app:aspectRatio="4:3"-->
+<!--        app:facing="back"-->
+<!--        app:flash="auto"/>-->
 
 
 </LinearLayout>
